# FlowDraft

./: .gitignore  README.md  README.ru.md  hf-auth.sh  main.py  pyproject.toml
src/: eval.py  plots.py  train.py
src/configs/: eval.yaml  train.yaml
src/configs/benchmark/: orthrus.yaml
src/configs/data/: aime24.yaml  aime25.yaml  gsm8k.yaml  humaneval.yaml  math500.yaml  mbpp.yaml  nemotron.yaml
src/configs/experiment/: ablate_consistency_only.yaml  ablate_teacher_only.yaml  baseline.yaml  baseline_block_wise.yaml  flowdraft_block_wise.yaml  flowdraft_packed_blockwise.yaml  flowdraft_packed_full.yaml  flowdraft_staged.yaml  flowmap_block_wise.yaml  flowmap_staged.yaml  orthrus.yaml  orthrus_block_wise.yaml
src/configs/model/: llama3_3b.yaml  qwen2_0.5b.yaml  qwen3_1.7b.yaml
src/data/: __init__.py  dataloaders.py
src/models/: factory.py  flowdraft.py  flowdraft_block_wise.py  lit_orthrus.py  lit_orthrus_baseline.py  lit_orthrus_baseline_block_wise.py  lit_orthrus_block_wise.py  model.py  orthrus.py  orthrus_block_wise.py
src/models/base/: base.py  df_adapter.py  fte.py
src/preprocessor/: __init__.py  df_processor.py
