[project]
name = "flowdraft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "hydra-core>=1.3.3",
    "lightning>=2.6.5",
    "loguru>=0.7.3",
    "matplotlib>=3.11.0",
    "mlflow>=3.14.0",
    "omegaconf>=2.3.1",
    "tensorboard>=2.21.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "typer>=0.26.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Install the repo as an editable package exposing `src` — this is what makes
# `from src.models... import ...` work from any cwd / entry point.
[tool.hatch.build.targets.wheel]
packages = ["src"]
